<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard_menu_home" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/drawer_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />

        <item
            android:id="@+id/drawer_dark_mode"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_dark_mode"
            app:actionLayout="@layout/item_drawer_dark_mode_action" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/drawer_help" />
    </group>

    <item
        android:id="@+id/drawer_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/drawer_logout" />
</menu>
